신청하기 버튼 a태그 수정

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="slider">
             <div class="slide">
                 <div class="wrap">
-                    <button class="more">신청하기</button>
-                    <h2 class="slide-title">일상돌봄 서비스</h2>
+                    <button class="more"><a href="#">신청하기</a></button>
+                    <h2 class="slide-title">일상돌봄 서비스<h2>
                 </div>
                 <p class="slide-information">일상생활에 돌봄이 필요한 중장년과 가족돌봄청년에게 일상생활의 어려움을 해소할 수 있도록 맞춤형 사회서비스를 통합 제공합니다.</p>
                 <div class="keywards">
